--- a/table.html
+++ b/table.html
@@ -1,15 +1,29 @@
-<div class='container'>
-    <table>
-        <div class='table-header'>cat sorting</div>
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Weight</th>
-                <th>Color</th>
-                <th>Gender</th>
-                <th>Age</th>
-            </tr>
-        </thead>
-        <tbody id='tbody'></tbody>
-    </table>
-</div>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Sorting Table</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-ﬁt=no">
+    <link rel="stylesheet" href="layout.css">
+</head>
+
+<body>
+    <div class='container'>
+        <table>
+            <div class='table-header'>cat sorting</div>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Weight</th>
+                    <th>Color</th>
+                    <th>Gender</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+            <tbody id='tbody'></tbody>
+        </table>
+    </div>
+    <script src="table_sort.js"></script>
+</body>
