all cat columns highlighted onclick, eventlistener to thead, switch

--- a/table.html
+++ b/table.html
@@ -13,7 +13,7 @@
     <div class='container'>
         <table id='table'>
             <div class='table-header'>cat sorting</div>
-            <thead>
+            <thead id='thead'>
                 <tr>
                     <th id='header1'>Name
                         <button class='btn' id='name'></button>
