--- a/table.html
+++ b/table.html
@@ -15,7 +15,7 @@
             <div class='table-header'>cat sorting</div>
             <thead id='thead'>
                 <tr>
-                    <th id='header1'>Name
+                    <th>Name
                         <button class='btn' id='name'></button>
                     </th>
                     <th>Weight
