--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Sorting Table</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-ﬁt=no">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="./styles/main.scss">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w"
         crossorigin="anonymous">
 </head>
@@ -14,7 +14,7 @@
 <body>
     <div class='container'>
         <div class='table-header'>cat sorting</div>
-        <table class="pure-table" id='table'>
+        <table class="pure-table table_main" id='table'>
 
             <thead id='thead'>
                 <tr>
@@ -38,5 +38,5 @@
             <tbody id='tbody'></tbody>
         </table>
     </div>
-    <script src="js/table_sort.js"></script>
+    <script src="./js/table_sort.ts"></script>
 </body>
