modules typescript added, font fixed

--- a/table.html
+++ b/table.html
@@ -13,10 +13,10 @@
 
 <body>
     <div class='container'>
-        <div class='table-header'>cat sorting</div>
+        <div class="table-header">cat sorting</div>
         <table class="pure-table table_main" id='table'>
 
-            <thead id='thead'>
+            <thead id="thead">
                 <tr>
                     <th>Name
                         <button class='btn' id='name'></button>
